--- a/main.html
+++ b/main.html
@@ -26,10 +26,31 @@
     <!-- command + return is used to go to next line without mouse -->
 
     <!-- ````links ans images part````` -->
-    <a href="https://google.com"target="_blank">google</a>
+    <a href="https://google.com" target="_blank" >google</a>
     <br>
     <a href="https://instagram.com" target="_blank">instagram</a>
-    <a href="/main2.html">goto next</a>
+    <br>
+    <a href="/merge_sort.cpp" target="_blank">goto next</a>
+
+    <!-- *****images part****** -->
+    <br>
+    <img src="nit.jpg" alt="not found">
+    <br>
+    <img src="https://source.unsplash.com/600x400/?nature,sand" alt="not found" width="300" height="300">
+    <!-- lists in html -->
+    <ul type="circle">
+        <li>first</li>
+        <li>second</li>
+        <li>third</li>
+        <li>fourth</li>
+    </ul>
+    <ol type="a">
+        <li>first</li>
+        <li>second</li>
+        <li>third</li>
+        <li>fourth</li>
+    </ol>
+
 
 </body>
 </html>
