--- a/main2.html
+++ b/main2.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    god is everywhere
+    <!-- inline and block elements -->
+    
+    <p style="border: brown;">this is me</p>
+    <p style="border: blue;">this is also me</p>
+    <span style="border: blanchedalmond;">this is me</span>
+    <span>this is also here me</span>
 </body>
 </html>
